# attack-map

./: .gitignore  Cargo.toml  Dockerfile  README.md  TODO.md  api.js  app.js  app.py  deploy.sh  docker-compose.yml  example.env  globe.js  index.html  index.js  ip2lat.js  ip2lat.mjs  ip2lat.py  nginx.js  notes.txt  package-lock.json  package.json  parse.js  rest.js  run.sh  server.sh  simple.py  sock.py  ssh.out  tcp-server.js  test.html  web_server.py
analysis/: edwin.session.sql  http.ipynb  http.py  pipeline.py
fails/: main.rs  redis.py  sql.py  test.rs
ideas/: app.js  app.py  express.js  index.html  index2.html  netcat.py  notes.txt  prac.html  reciever.sh  sock.py  ssh.out  tcp-server.js
notebooks/.ipynb_checkpoints/: exploring-checkpoint.ipynb
public/: index.ejs  style.css
src/: http_analysis.sh  lib.rs
templates/: base.html.tera  index.html  index.html.tera  nice.html
views/: globe.ejs  index.ejs
